--- a/WebApplication2/Views/Shared/_Layout.cshtml
+++ b/WebApplication2/Views/Shared/_Layout.cshtml
@@ -143,7 +143,8 @@
 
 
                         <li class="nav-item">
-                            <a class="nav-link" asp-controller="ACCOUNT" asp-action="REGISTER">
+                <a class="nav-link" asp-controller="Account" asp-action="Step1">
+                    
                                 For Instructors
                             </a>
                         </li>
