--- a/WebApplication2/Views/_ViewImports.cshtml
+++ b/WebApplication2/Views/_ViewImports.cshtml
@@ -2,5 +2,6 @@
 @using WebApplication2.Models
 @using WebApplication2.ViewModels
 @using WebApplication2.Helpers.Enums
+@using WebApplication2.ViewModels.InstructorViewModels
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
