adding all user types repository

--- a/WebApplication2/Areas/Admin/Views/Shared/_aAdminLayout.cshtml
+++ b/WebApplication2/Areas/Admin/Views/Shared/_aAdminLayout.cshtml
@@ -187,7 +187,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item w-99.9" style="margin-left:auto;">
+                        <li class="nav-item w-100" style="margin-left:auto;">
                             <div class="search-form">
                                 <form method="get" asp-controller="Course" asp-action="Index1" class="d-flex w-100">
                                     <div class="d-flex align-items-center w-100 p-2" style="border-radius: 25px;">
@@ -212,7 +212,25 @@
 
             </li>
 
-
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle text-muted waves-effect waves-dark pro-pic" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <img src="~/images/product_05.jpg" alt="user" class="rounded-circle" width="3" style="width:50px;height:35px;">
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-end user-dd animated" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="javascript:void(0)">
+                                    <i class="ti-user m-r-5 m-l-5"></i>
+                                    My Profile
+                                </a>
+                                <a class="dropdown-item" href="javascript:void(0)">
+                                    <i class="ti-wallet m-r-5 m-l-5"></i>
+                                    My Balance
+                                </a>
+                                <a class="dropdown-item" asp-action="logout" asp-controller="account" asp-area="">
+                                    <i class="ti-email m-r-5 m-l-5"></i>
+                                    Logout
+                                </a>
+                            </ul>
+                        </li>
             </ul>
             </div>
             </div>
@@ -231,13 +249,48 @@
 
 
 
-    <div class="container-fluid main-content" style="margin-top:20px">
+    <div class="container-fluid main-content" style="margin-top:5px">
         <div class="row">
             <div class="col-lg-3">
                 <button class="btn btn-dark mb-3 w-100 d-lg-none" id="filter-toggle">Dashboard</button>
                 <div class="sidebar d-none d-lg-block">
+
+                    <div class="user-profile d-flex no-block dropdown m-t-20">
+                        <div class="user-pic">
+                            <img src="~/images/slide_03.jpg" alt="users"
+                                 class="rounded-circle" width="9" style="width:70px;height:50px; margin-right:10px;" />
+                        </div>
+                        <div class="user-content hide-menu m-l-10">
+                        @*     <a href="#" class="" id="Userdd" role="button"
+                               data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> *@
+                                <h5 class="m-b-0 user-name font-medium text-dark">
+                                    Osama Abdullah @* <i class="fa fa-angle-down"></i> *@
+                                </h5>
+                                <span class="op-5 user-email text-muted">Hala@gmail.com</span>
+                        @*     </a> *@
+                            @* <div class="dropdown-menu dropdown-menu-end" aria-labelledby="Userdd">
+                                <a class="dropdown-item" href="#">
+                                    <i class="ti-user m-r-5 m-l-5"></i> My Profile
+                                </a>
+                                <a class="dropdown-item" href="javascript:void(0)">
+                                    <i class="ti-wallet m-r-5 m-l-5"></i> My Balance
+                                </a>
+                                <a class="dropdown-item" href="#">
+                                    <i class="ti-email m-r-5 m-l-5"></i> Inbox
+                                </a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="#">
+                                    <i class="ti-settings m-r-5 m-l-5"></i> Account Setting
+                                </a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="#">
+                                    <i class="fa fa-power-off m-r-5 m-l-5"></i> Logout
+                                </a>
+                            </div> *@
+                        </div>
+                    </div>
                     <div class="filter-section">
-                        <h3>Dashboard</h3>
+                        <h3></h3>
                     </div>
                     <div class="filter-section">
                         <h4>
@@ -263,6 +316,15 @@
                             <a class="text-black"
                                asp-action="report" asp-controller="homee" aria-expanded="false">
                                 <i class="fa fa-file"></i><span class="hide-menu" style="margin-left:5px;">Reports</span>
+                            </a>
+                        </h4>
+                     
+                    </div>
+                    <div class="filter-section">
+                        <h4>
+                            <a class="text-black"
+                               asp-action="Instructor" asp-controller="homee" aria-expanded="false">
+                                <i class="fa fa-file"></i><span class="hide-menu" style="margin-left:5px;">Instructors</span>
                             </a>
                         </h4>
                      
