--- a/WebApplication2/Views/_ViewImports.cshtml
+++ b/WebApplication2/Views/_ViewImports.cshtml
@@ -3,5 +3,6 @@
 @using WebApplication2.ViewModels
 @using WebApplication2.Helpers.Enums
 @using WebApplication2.ViewModels.InstructorViewModels
+@using WebApplication2.ViewModels.StudentViewModels
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
